<resources>
    <string name="app_name">ExamMaster</string>
    <string name="title_text">Exam\nMaster</string>
    <string name="subtitle_text">GRE version</string>
    <string name="login_button">Facebook Login</string>
    <string name="play_button">Start</string>
    <string name="ranking_button">Ranking</string>
    <string name="count_text">Q1</string>
    <string name="question_text">Question</string>
</resources>
